Fix clipped large tall images (using actual length and percent)

--- a/tosixinch/data/css/sample.t.css
+++ b/tosixinch/data/css/sample.t.css
@@ -82,7 +82,7 @@ img.tsi-wide {
 }
 
 img.tsi-tall {
-    height: 90%;
+    height: {{ height|percent98 }};
 }
 
 /* img.tsi-small { */
